# comfyg

./: README.md  pyproject.toml  ruff.toml
.github/workflows/: publish-to-pypi.yml
src/comfyg/: __init__.py  _casting.py  _core.py  _loader.py  _typecheck.py  _utils.py
tests/: test_casting.py  test_core.py  test_loader.py  test_typechecks.py
